--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p><strong>Original_Title</strong>: {{orTitle}}</p>
                     <!-- <img src="https://www.countryflags.io/{{country}}/flat/64.png" alt="Country flag"> -->
                     <p><strong>Voto</strong>: {{{rate}}}</p>
-                    <p><strong>Overview</strong>: {{overview}};</p>
+                    <p><strong>Overview</strong>: {{overview}}</p>
                 </div>
             </div>
         </script>
