milestone-4-only-search

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="header">
                 <span class="header-lf">BOOLFLIX</span>
                 <input class="search-input" placeholder="Insert the title here">
+                <button id="button">Search</button>
             </div>
         </header>
         <div class="result-card">
