--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="back">
                     <p><strong>Titolo</strong>: {{title}}</p>
                     <p><strong>Original_Title</strong>: {{orTitle}}</p>
-                    <!-- <img src="https://www.countryflags.io/{{country}}/flat/64.png" alt="Country flag"> -->
+                    <p>Original language<strong>: <img class="back-img" src="https://www.countryflags.io/{{country}}/flat/64.png" alt="Country flag"></p>
                     <p><strong>Voto</strong>: {{{rate}}}</p>
                     <p><strong>Overview</strong>: {{overview}}</p>
                 </div>
